--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
-  <title>Railbook</title>
+  <title>図書管理システム</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
@@ -11,4 +11,5 @@
 <%= yield %>
 
 </body>
+<br><%=link_to "出雲商業高校","http://www.shimanet.ed.jp/izusho/" %>
 </html>
