--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -29,7 +29,7 @@
         <td><%= book.cd %></td>
         <td><%= link_to 'Show', book %></td>
         <td><%= link_to 'Edit', edit_book_path(book) %></td>
-        <td><%= link_to 'Destroy', book, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Destroy', book, method: :delete, data: { confirm: "「#{book.title}」を削除しますか？" } %></td>
       </tr>
     <% end %>
   </tbody>
