--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -4,6 +4,7 @@
 
 <%= link_to "検索", search_books_path %>
 <%= link_to "リセット", books_path %>
+<%= link_to "リセット", view_helper_test_path %>
 
 <table>
   <thead>
