--- a/app/views/publishes/_form.html.erb
+++ b/app/views/publishes/_form.html.erb
@@ -17,7 +17,7 @@
   </div>
   <div class="field">
     <%= f.label :address %><br>
-    <%= f.text_field :address %>
+    <%= select :user, :address, ["出雲市","松江市","雲南市"] %>
   </div>
   <div class="actions">
     <%= f.submit %>
