--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,8 +7,11 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-
+<%= image_tag 'railbook.png' %>
+<ul>
+<li><%= link_to "書籍一覧", books_path %></li>
+<li><%= link_to "出版社一覧", publishes_path %></li>
+</ul>
 <%= yield %>
-
 </body>
 </html>
