--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -30,5 +30,12 @@
   <%= @book.cd %>
 </p>
 
+<h2>評判</h2>
+<ul>
+<% @book.reviews.each do |review| %>
+ <li><%= review.body %></li>
+<% end %>
+</ul>
+
 <%= link_to 'Edit', edit_book_path(@book) %> |
 <%= link_to 'Back', books_path %>
