--- a/app/views/books/_form.html.erb
+++ b/app/views/books/_form.html.erb
@@ -24,8 +24,8 @@
     <%= f.number_field :price %>
   </div>
   <div class="field">
-    <%= f.label :publish %><br>
-    <%= f.collection_select(:publish, Publish.all, :publishname, :publishname, :include_blank => true) %>
+    <%= f.label :publish_id %><br>
+    <%= f.collection_select(:publish_id, Publish.all, :publishname, :publishname, :include_blank => true) %>
   </div>
   <div class="field">
     <%= f.label :published %><br>
