--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,7 @@
 <li><%= link_to "書籍一覧", books_path %></li>
 <li><%= link_to "出版社一覧", publishes_path %></li>
 <li><%= link_to "レビュー一覧", reviews_path %></li>
+<li><%= link_to "ユーザー一覧", users_path %></li>
 </ul>
 <%= yield %>
 </body>
