--- a/app/views/reviews/_form.html.erb
+++ b/app/views/reviews/_form.html.erb
@@ -19,6 +19,10 @@
     <%= f.label :body %><br>
     <%= f.text_area :body %>
   </div>
+  <div class="field">
+    <%= f.label :user_id %><br>
+    <%= collection_select :review, :user_id, User.all, :id, :username, :include_blank => true %>
+  </div>
   <div class="actions">
     <%= f.submit %>
   </div>
