ログイン、ログアウト

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,12 @@
 </head>
 <body>
 <%= image_tag 'railbook.png' %>
+
+<div align = "right">
+ ログインユーザー:<%= session[:usrn] %></br>
+ <%= link_to "ログアウト", controller: :login, action: :index %>
+</div>
+
 <ul>
 <li><%= link_to "書籍一覧", books_path %></li>
 <li><%= link_to "出版社一覧", publishes_path %></li>
